--- a/signal-ingestion-service/src/main/resources/application.yaml
+++ b/signal-ingestion-service/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
