--- a/trade-execution-service/src/main/resources/application.yaml
+++ b/trade-execution-service/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: false
 
   kafka:
